fixed bg not showing on safari browser

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: center;
+  background-size: cover;
   background-attachment: fixed;
   height: 100vh;
   margin-bottom: 200px;
